--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
+    "axios": "^0.21.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
